name: opentok
version: 0.0.0
description: An OpenTok SDK for Haskell
build-type: Simple
cabal-version: >= 1.18
author: Aaron Rice
maintainer: adrice727@gmail.com
copyright: 2018 Aaron Rice

library
    default-language:   Haskell2010
    exposed-modules:    OpenTok, Request, Session, Archive, OTError
    other-modules:      Client
    hs-source-dirs:     src
    build-depends:
      base >=4.7 && <5
      , base-compat
      , aeson
      , aeson-casing
      , aeson-compat
      , base64-bytestring
      , bytestring
      , case-insensitive
      , containers
      , convertible
      , http-client
      , http-client-tls
      , http-types
      , iproute
      , jose
      , lens
      , monad-time
      , unordered-containers
      , uuid
      , string-conversions
      , text
      , time
      , transformers
    if flag(documentation)
        build-depends: hscolour == 1.20.*

flag documentation
    default: False


